section 2 done started section 3

--- a/src/Sass/abstracts/_variables.scss
+++ b/src/Sass/abstracts/_variables.scss
@@ -1,3 +1,15 @@
 $color-primary: #ff6f58;
-$color-secondery: #03989E;
+$color-primary-clear: #ff6e58;
+$color-secondery: #03989e;
+$color-secondery-clear: #03999ed7;
 
+$mainTitle-fontSize: 6rem;
+$subTitle-fontSize: 4rem;
+$subText-fontSize: 2rem;
+
+$mainTitle-fontWeight: 700;
+$subText-fontWeight: 400;
+
+$sectionHight: 95vh;
+
+$section-padding: 0 5rem 0;
