--- a/src/Sass/components/_logo.scss
+++ b/src/Sass/components/_logo.scss
@@ -1,6 +1,8 @@
 .logo {
   position: absolute;
-  width: 20rem;
+  width: 18rem;
+  // margin-right: 60rem;
   height: auto;
   top: -1.5rem;
+  left: 0;
 }
