--- a/src/Sass/base/_utilities.scss
+++ b/src/Sass/base/_utilities.scss
@@ -16,6 +16,9 @@
   .svg-v1_o {
     margin-top: 13rem;
   }
+  .tall_drawing {
+    margin-top: 8rem;
+  }
 }
 
 @media (max-width: 1200px) {
@@ -32,22 +35,24 @@
 }
 
 @media (max-width: 1000px) {
-  .hero {
+  .hero,
+  .secondSec_container {
     flex-direction: column;
     align-items: center;
   }
-  header {
+  header,
+  .secondSec_container--text,
+  .secondSec_container--img {
     flex: 1;
     width: 100%;
-  }
-  .logo {
-    top: -3.5rem;
-    left: -1rem;
   }
   .svg-pencils,
   .svg-v1_o {
     margin-top: 0;
     min-width: 27rem;
+  }
+  .tall_drawing {
+    margin-top: 0;
   }
 }
 
@@ -57,5 +62,8 @@
   }
   .hero_svgs {
     width: 100%;
+  }
+  .secondSec_container--img img{
+    height: 65rem;
   }
 }
