--- a/src/Sass/components/_mainNavigation.scss
+++ b/src/Sass/components/_mainNavigation.scss
@@ -4,6 +4,8 @@
     display: flex;
     flex-direction: row-reverse;
     justify-content: right;
+    align-items: center;
+    padding: 7rem 5rem 3rem;
 
     .navigation_a {
       &:link,
