--- a/src/Sass/index.scss
+++ b/src/Sass/index.scss
@@ -5,13 +5,16 @@
 @import "components/button";
 @import "components/mainTitle";
 @import "components/shape1";
-@import "components/hero";
 @import "components/svgs";
 @import "components/mainNavigation";
 @import "components/logo";
 @import "components/SmallScreenNavigation";
 
 @import "layout/layout";
+
+@import "sections/hero";
+@import "sections/secondSection";
+@import "sections/technicalInfo";
 
 @import "base/animations";
 @import "base/base";
