added contact section

--- a/src/Sass/index.scss
+++ b/src/Sass/index.scss
@@ -4,7 +4,6 @@
 
 @import "components/button";
 @import "components/mainTitle";
-@import "components/shape1";
 @import "components/svgs";
 @import "components/mainNavigation";
 @import "components/logo";
@@ -15,6 +14,8 @@
 @import "sections/hero";
 @import "sections/secondSection";
 @import "sections/technicalInfo";
+@import "sections/contact";
+@import "sections/footer";
 
 @import "base/animations";
 @import "base/base";
