--- a/src/Sass/base/_utilities.scss
+++ b/src/Sass/base/_utilities.scss
@@ -34,17 +34,35 @@
   }
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 1025px) {
+  .info_main_container {
+    justify-content: center;
+    margin-top: 30rem;
+  }
+  .info_title {
+    text-align: center;
+    margin-right: 0;
+  }
   .hero,
-  .secondSec_container {
+  .secondSec_container,
+  .info_container,
+  .contact_info {
     flex-direction: column;
-    align-items: center;
   }
   header,
   .secondSec_container--text,
   .secondSec_container--img {
     flex: 1;
     width: 100%;
+  }
+  .info_container {
+    margin-right: 0;
+    align-items: center;
+    &--1,
+    &--2,
+    &--3 {
+      width: 80%;
+    }
   }
   .svg-pencils,
   .svg-v1_o {
@@ -54,16 +72,49 @@
   .tall_drawing {
     margin-top: 0;
   }
+  .secondSec_container--img img {
+    margin-top: 5rem;
+    height: 55rem;
+  }
+  .contact{
+    
+      &_phone,&_whatsapp{
+        margin: 3rem;
+        display: flex;
+        flex-direction: column-reverse;
+        p{
+          margin-bottom: 2rem;
+        }
+      }
+  }
 }
 
-@media (max-width: 700px) {
+@media (max-width: 769px) {
+  .logo {
+    top: -3rem;
+  }
   .svg-pencils {
     left: 0;
   }
   .hero_svgs {
     width: 100%;
   }
-  .secondSec_container--img img{
+  .secondSec_container--img img {
     height: 65rem;
+  }
+  .info_main_container {
+    margin-top: 70rem;
+  }
+  .contact{
+    p:first-child{
+      width: 100%;
+      font-size: 2rem;
+    }
+  }
+}
+
+@media (max-width: 400px) {
+  .info_main_container {
+    margin-top: 105rem;
   }
 }
