--- a/src/Sass/sections/_secondSection.scss
+++ b/src/Sass/sections/_secondSection.scss
@@ -21,7 +21,7 @@
       margin: 3rem 0 3rem;
     }
 
-    label {
+    p {
       font-size: $subText-fontSize;
       font-weight: $subText-fontWeight;
     }
