--- a/src/Sass/abstracts/_variables.scss
+++ b/src/Sass/abstracts/_variables.scss
@@ -10,6 +10,10 @@ $subText-fontSize: 2rem;
 $mainTitle-fontWeight: 700;
 $subText-fontWeight: 400;
 
+$fontStyle: Arimo, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+  "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  sans-serif;
+
 $sectionHight: 95vh;
 
 $section-padding: 0 5rem 0;
