--- a/src/Sass/components/_mainNavigation.scss
+++ b/src/Sass/components/_mainNavigation.scss
@@ -2,7 +2,7 @@
   ul {
     list-style-type: none;
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: row;
     justify-content: right;
     align-items: center;
     padding: 7rem 5rem 3rem;
