--- a/src/Sass/abstracts/_variables.scss
+++ b/src/Sass/abstracts/_variables.scss
@@ -3,6 +3,8 @@ $color-primary-clear: #ff6e58;
 $color-secondery: #03989e;
 $color-secondery-clear: #03999e9d;
 
+$sections-bg-color: azure;
+
 $mainTitle-fontSize: 6rem;
 $subTitle-fontSize: 4rem;
 $subText-fontSize: 2rem;
