--- a/src/Sass/components/_mainNavigation.scss
+++ b/src/Sass/components/_mainNavigation.scss
@@ -1,4 +1,6 @@
 .nav-container {
+  background-color: $sections-bg-color;
+
   ul {
     list-style-type: none;
     display: flex;
@@ -15,7 +17,7 @@
         color: black;
         margin: 1rem 0 0 16rem;
         text-align: right;
-        color: gray;
+        color: rgb(91, 91, 91);
 
         &:hover {
           color: $color-primary;
