--- a/src/Sass/sections/_footer.scss
+++ b/src/Sass/sections/_footer.scss
@@ -1,13 +1,14 @@
 .footer {
-  height: 10rem;
+  height: 6rem;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
   font-size: medium;
+  background-color: $sections-bg-color;
 
   a {
-    margin: 3rem;
+    margin: 0 3rem;
   }
 
   &_links,
