--- a/src/Sass/sections/_hero.scss
+++ b/src/Sass/sections/_hero.scss
@@ -3,6 +3,8 @@
   display: flex;
   flex-direction: row;
   padding: $section-padding;
+  background-color: $sections-bg-color;
+  padding-bottom: 5rem;
 }
 
 header {
@@ -59,7 +61,7 @@ header {
   animation: slideFromLeft 2s ease-in-out forwards;
 }
 
-.decorated_text{
+.decorated_text {
   text-decoration: underline;
   font-weight: bold;
   font-style: italic;
