--- a/src/Sass/components/_SmallScreenNavigation.scss
+++ b/src/Sass/components/_SmallScreenNavigation.scss
@@ -1,3 +1,10 @@
+.navigation {
+  position: fixed;
+  z-index: 4;
+  width: 100%;
+  background-color: black;
+}
+
 a {
   text-decoration: none;
   color: $color-secondery;
@@ -11,8 +18,12 @@ a:hover {
 #menuToggle {
   display: block;
   position: absolute;
-  top: 50px;
-  right: 50px;
+  top: 40px;
+  right: 40px;
+  padding: 1.5rem 1rem 1rem;
+  border-radius: 25px;
+  box-shadow: 0 0.5rem 1rem rgba(black, 0.2);
+  background-color: $color-primary-clear;
 
   z-index: 1;
 
@@ -22,8 +33,8 @@ a:hover {
 
 #menuToggle input {
   display: block;
-  width: 40px;
-  height: 32px;
+  width: 60px;
+  height: 70px;
   position: absolute;
   top: -7px;
   left: -5px;
