--- a/src/Sass/sections/_hero.scss
+++ b/src/Sass/sections/_hero.scss
@@ -4,7 +4,8 @@
   flex-direction: row;
   padding: $section-padding;
   background-color: $sections-bg-color;
-  padding-bottom: 10rem;
+  padding-top: 10rem;
+  padding-bottom: 12rem;
 }
 
 header {
